BM-Main/x64/Debug/BM-Main.log
  avr-g++ -MM -MG -DF_CPU=16000000 -I./include -mmcu=atmega328p -Wall -Wextra -Wconversion -std=c++17 -Os -fconcepts  -fno-exceptions -fno-unwind-tables -fno-rtti -fno-threadsafe-statics  -funsigned-char -funsigned-bitfields -fshort-enums  main.cc | sed "s/main\.o/& main.d/g" > main.d
  avr-g++ -mmcu=atmega328p -Wall -Wextra -Wconversion -std=c++17 -Os -fconcepts  -fno-exceptions -fno-unwind-tables -fno-rtti -fno-threadsafe-statics  -funsigned-char -funsigned-bitfields -fshort-enums  -DF_CPU=16000000 -I./include  -c -o main.o main.cc
  In file included from main.cc:15:
ADC.h(77,1): warning G93EE9793: "/*" within comment [-Wcomment]
   /*ISR(ADC_vect)
    
  In file included from main.cc:14:
  pcd8544.h: In function 'void LcdInit()':
pcd8544.h(330,11): warning G04C62F8D: conversion from 'int' to 'uint8_t' {aka 'unsigned char'} may change value [-Wconversion]
    LCD_PORT &= ~(_BV(LCD_RST_PIN));
             ^
  pcd8544.h: In function 'void LcdUpdate()':
pcd8544.h(467,15): warning G04C62F8D: conversion from 'int' to 'char' may change value [-Wconversion]
    LcdSend(0x80 | (LoWaterMark % LCD_X_RES), LCD_CMD);
            ~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
pcd8544.h(468,15): warning G04C62F8D: conversion from 'int' to 'char' may change value [-Wconversion]
    LcdSend(0x40 | (LoWaterMark / LCD_X_RES), LCD_CMD);
            ~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~
  pcd8544.h: In function 'void LcdSend(char, LcdCmdData)':
pcd8544.h(494,11): warning G04C62F8D: conversion from 'int' to 'uint8_t' {aka 'unsigned char'} may change value [-Wconversion]
    LCD_PORT &= ~(_BV(LCD_CE_PIN));
             ^
  In file included from main.cc:15:
  ADC.h: At global scope:
ADC.h(8,1): error G49BDF932: expected unqualified-id before '.' token
   .-namespace BMCPP
   ^
  In file included from main.cc:14:
pcd8544.h(302,14): warning G1AD04B87: 'LcdCacheIdx' defined but not used [-Wunused-variable]
   static int   LcdCacheIdx;
                ^~~~~~~~~~~
  make: *** [<builtin>: main.o] Error 1
C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\IDE\VC\VCTargets\Microsoft.MakeFile.Targets(44,5): error MSB3073: Der Befehl "make" wurde mit dem Code 2 beendet.
